--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
 
   <br><br>My research interests lie broadly in natural language processing, computer vision, and optimization.
-  I am in the process of exploring my research direction and am open to new and specific topics in related areas.
+  I am in the process of exploring my research direction and am open any topics in related areas.
 
   <h3 id="news">News</h3>
   <!-- (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>) -->
@@ -113,13 +113,40 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
       <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>
       <br><i>B.S. in Computer Science and Industrial Systems Engineering</i>
       <br><i>2023.08 - Present, Daejeon, South Korea</i>
+      <!-- <br>B.S. in Computer Science and Industrial Systems Engineering
+      <br>2023.08 - Present, Daejeon, South Korea -->
+    </li>
+    <li>
+      <strong>Hanoi University of Science and Technology (HUST)</strong>
+      <br><i>B.S. in Electrical Engineering, Talented Engineer's Program (Dropped out)</i>
+      <br><i>2021.08 - 2023.02, Hanoi, Vietnam</i>
+    </li>
+    <li>
+      <strong>Quoc Hoc Hue High School for Gifted Students</strong>
+      <br><i>High School Diploma, Mathematics Class</i>
+      <br><i>2018.08 - 2021.06, Thue Thien Hue, Vietnam</i>
     </li>
   </ul>
 
   <h3><a name="experience"></a>Research Experience</h3>
   <ul>
-    <li>[2025.09 - 2026.01] Research Intern, <strong>AIBioMed Research Group, Taipei Medical University</strong>, Taipei, Taiwan</li>
-    <li>[2025.06 - 2025.08] Research Intern, <strong>National Engineering Laboratory for Information Content Analysis Technology, Shanghai Jiao Tong University</strong>, Shanghai, China</li>
+    <!-- <li>[2025.09 - 2026.01] Research Intern, <strong>AIBioMed Research Group, Taipei Medical University</strong>, Taipei, Taiwan</li> -->
+    <!-- <li>[2025.06 - 2025.08] Research Intern, <strong>National Engineering Laboratory for Information Content Analysis Technology, Shanghai Jiao Tong University</strong>, Shanghai, China</li> -->
+    <li>
+      <strong>AIBioMed Research Group, Taipei Medical University</strong>
+      <br><i>Research Intern, Advisor: <a href="https://scholar.google.com/citations?user=4c7lOjIAAAAJ&hl=en" target="_blank">Le Nguyen Quoc Khanh</a></i>
+      <br><i>2025.09 - 2026.01, Taipei, Taiwan</i>
+    </li>
+    <li>
+      <strong>AI Security Lab, Shanghai Jiao Tong University</strong>
+      <br><i>Research Intern, Advisors: <a href="https://scholar.google.com/citations?user=8tg3mv0AAAAJ" target="_blank">Shilin Wang</a> and <a href="https://yangleisx.github.io/" target="_blank">Yang Lei</a></i>
+      <br><i>2025.06 - 2025.08, Shanghai, China</i>
+    </li>
+    <li>
+      <strong>Data Intelligence Lab, KAIST</strong>
+      <br><i>Individual Study, Advisor: <a href="https://sites.google.com/view/whanglab/professor" target="_blank">Steven Euijong Whang</a></i>
+      <br><i>2025.06 - 2025.08, Daejeon, South Korea</i>
+    </li>
   </ul>
 
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
