--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
 
   <br><br>My research interests lie broadly in natural language processing, computer vision, and optimization.
-  I am in the process of exploring my research direction and am open any topics in related areas.
+  I am in the process of exploring my research direction and am open to any topics in related areas.
 
   <h3 id="news">News</h3>
   <!-- (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>) -->
@@ -151,10 +151,16 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
-    <li>31st Place, ICPC Asia Pacific Championship 2025 (compete with 2 members)</li>
-    <li>Gold Medal, ICPC Asia Taichung Regional Contest 2024</li>
-    <li>Third Prize, Vietnam National Math Olympiad (VMO) 2020</li>
-    <li>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam</li>
+    <li>
+      <strong>31st Place, ICPC Asia Pacific Championship 2025</strong>
+      <br>Teammmate: Aidar Munduzbaev (<a href="https://codeforces.com/profile/aimoon" target="_blank" style="color: red">aimoon</a>)
+    </li>
+    <li>
+      <strong>Gold Medal, ICPC Asia Taichung Regional Contest 2024</strong>
+      <br>Teammmates: Aidar Munduzbaev (<a href="https://codeforces.com/profile/aimoon" target="_blank" style="color: red">aimoon</a>) and Hoang Ngoc Bao Khue (<a href="https://codeforces.com/profile/khuepr123" target="_blank" style="color: red">khuepr123</a>)
+    </li>
+    <li><strong>Third Prize, Vietnam National Math Olympiad (VMO) 2020</strong></li>
+    <li><strong>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam</strong></li>
   </ul>
 
 
