--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
       <br>Teammmates: Aidar Munduzbaev (<a href="https://codeforces.com/profile/aimoon" target="_blank" style="color: red">aimoon</a>) and Hoang Ngoc Bao Khue (<a href="https://codeforces.com/profile/khuepr123" target="_blank" style="color: red">khuepr123</a>)
     </li>
     <li><strong>Third Prize, Vietnam National Math Olympiad (VMO) 2020</strong></li>
-    <li><strong>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam</strong></li>
+    <li><strong>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam 2018</strong></li>
   </ul>
 
 
@@ -171,7 +171,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 </div>
 
   <div id='footer'>
-    <p style="text-align:center;">Last updated: June 2025</p>
+    <p style="text-align:center;">Last updated: July 2025</p>
   </div>
 
 </body>
