--- a/research.html
+++ b/research.html
@@ -91,10 +91,14 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br>
   (*: equal contribution, ☨: corresponding author / major supervision)
   <!-- <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> -->
-  <h3><a name="pub"></a>2025</h3> 
+  
+  <h3><a name="pub"></a></h3>
+  To be updated. Nothing to show now.
+  
+  <!-- <h3><a name="pub"></a>2025</h3> 
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8">How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
+        <div id="text" style = "color:#1f57b8">[C1] How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
         Dao Ngoc Diep*, <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
         <br>International Conference about Batman and Boboiboy (ICBB) 2025
         [<a href="https://www.youtube.com/watch?v=zJCfJVVkjek" target="_blank">code</a>]
@@ -104,29 +108,16 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
       <p> </p>
 
 
-      <!-- <li>
+      <li>
         <div id="text" style = "color:#1f57b8">Aspect Sentiment Quad Prediction as Paraphrase Generation</div>
         <strong>Wenxuan Zhang</strong>, Yang Deng, Xin Li, Yifei Yuan, Lidong Bing, Wai Lam
-        <br>EMNLP 2021 [<a href="https://aclanthology.org/2021.emnlp-main.726/">paper</a>] [<a href="https://github.com/isakzhang/absa-quad">data&code</a>]
-        <br><span style="color:orangered;">Top 1% pro papers with spotlight</span>
-      </li>
-      <p> </p> -->
-
-    </ul>
-
-  <h3><a name="pub"></a>2024</h3> 
-    <ul>
-      <li>
-        <div id="text" style = "color:#1f57b8">How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
-        Dao Ngoc Diep*, <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
-        <br>International Conference about Batman and Boboiboy (ICBB) 2025
-        [<a href="https://www.youtube.com/watch?v=zJCfJVVkjek" target="_blank">code</a>]
-        [<a href="https://www.youtube.com/watch?v=lj8TV9q59P4" target="_blank">paper</a>]
+        <br>Empirical Methods in Natural Language Processing (EMNLP) 2021 [<a href="https://aclanthology.org/2021.emnlp-main.726/">paper</a>] [<a href="https://github.com/isakzhang/absa-quad">data&code</a>]
         <br><span style="color:orangered;">Top 1% pro papers with spotlight</span>
       </li>
       <p> </p>
 
-    </ul>
+    </ul> -->
+
 
   <!-- <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> -->
 </div>
