--- a/research.html
+++ b/research.html
@@ -99,7 +99,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
     <ul>
       <li>
         <div id="text" style = "color:#1f57b8">[C1] How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
-        Dao Ngoc Diep*, <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
+        <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
         <br>International Conference about Batman and Boboiboy (ICBB) 2025
         [<a href="https://www.youtube.com/watch?v=zJCfJVVkjek" target="_blank">code</a>]
         [<a href="https://www.youtube.com/watch?v=lj8TV9q59P4" target="_blank">paper</a>]
