--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 </head>
 
 <body>
+  <!-- Phần này chỉnh -->
+  <!-- <div id="menu">
+    <div>
+      <a href="index.html">About</a>
+    </div>
+    <div>
+      <a href="research.html">Publications</a>
+    </div>
+    <div>
+      <a href="fun.html">Fun</a>
+    </div>
+    <script>
+      $(function () {
+        const current = window.location.pathname.split("/");
+        $('#menu div a').each(function(){
+          const $this = $(this);
+          // if the current path is like this link, make it active
+          if (current.indexOf($this.attr("href")) !== -1) {
+            $this.parent().addClass("now");
+          }
+        })
+      });
+    </script>
+  </div> -->
+
+  <!-- Đến đây -->
   <div class="container content"> 
   <main>
   <div class="home">
@@ -106,6 +132,13 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   </div>
 
   <h3><a name ="education"></a>Education</h3>
+  <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong> | Daejeon, South Korea, 2023.08 - Present
+  <br><i>B.S. in Computer Science and Industrial Systems Engineering</i>
+  <span class="spacer"></span>
+  <strong>Hanoi University of Science and Technology (HUST)</strong> | Hanoi, Vietnam, 2021.08 - 2023.02
+  <br><i>B.S. in Electrical Engineering, Talented Engineer's Program (Dropped out)</i>
+
+  <br><br>
   <ul>
     <!-- <li>[2023.08 - Present] B.S. in Computer Science and Industrial Systems Engineering, <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>, Daejeon, South Korea</li> -->
     <!-- <li>[2018.06 - 2021.06] High School Diploma, Mathematics Class, <strong>Quoc Hoc Hue High School for Gifted Students</strong>, Thue Thien Hue, Vietnam</li> -->
