--- a/research.html
+++ b/research.html
@@ -62,15 +62,11 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   -->
 
   <!--Navigation bar-->
-  <div id="menu">
-    <div>
-      <a href="index.html">About</a>
-    </div>
-    <div>
-      <a href="research.html">Publications</a>
-    </div>
-    <div>
-      <a href="fun.html">Fun</a>
+  <nav id="menu">
+    <div class="container">
+      <div><a href="index.html">About</a></div>
+      <div><a href="research.html" class="current">Publications</a></div>
+      <div><a href="fun.html">Fun</a></div>
     </div>
     <script>
       $(function () {
@@ -84,7 +80,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
         })
       });
     </script>
-  </div>
+  </nav>
   <!--end of Navigation bar-->
 
   See full list of my publications at <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Google Scholar</a>
