--- a/fun.html
+++ b/fun.html
@@ -96,12 +96,12 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
   <img src="img/football.jpg" alt="Photo 2">
 </div>
 
-<br>My dream is to travel around the world. Below are the countries I have visited so far, and I hope this list will continue to grow.
+<br>Below are the countries I have visited so far, and I hope this list will continue to grow.
 <!-- https://www.flaticon.com/search -->
 <ul>
   <li>
     Vietnam<img src="flag/vietnam.png" alt="🇻🇳" class="flag-icon">: 
-    My hometown—I have been to around 30 provinces and cities, too many to list.
+    My hometown.
   </li>
   <li>
     South Korea<img src="flag/korea.png" alt="kr" class="flag-icon">: 
@@ -148,7 +148,7 @@ Abc xyz
 
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: June 2024</p>
+  <p style="text-align:center;">Last updated: July 2025</p>
 </div>
 
 </body>
