--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br>Department of Industrial & Systems Engineering
   <br>Korea Advanced Institute of Science and Technology (KAIST)
   
-  
-  <br><br><a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a>
+  <span class="spacer"></span>
+  <a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a>
 
   <br><br>
   <!-- 
@@ -67,7 +67,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <div class="container">
     <div><a href="index.html" class="current">About</a></div>
     <div><a href="research.html">Publications</a></div>
-    <div><a href="fun.html">Fun</a></div>
+    <div><a href="Blog.html">Blog</a></div>
   </div>
   <script>
     $(function () {
@@ -83,22 +83,23 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   </script>
 </nav>
   <!--end of Navigation bar-->
+  <br>
 
   <h3>About me</h3>
   <!-- <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3> -->
   I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
-  <span class="spacer"></span>
   My research interests lie broadly in natural language processing, computer vision, and optimization.
-  I am in the process of exploring my research direction and am open to any topics in related areas.
+  I am in the process of exploring my research direction.
+  <!-- <span class="spacer"></span> -->
 
   <br><br>
   <h3 id="news">News</h3>
   <!-- (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>) -->
   <div style="max-height: 300px; overflow-y: auto;">
     <ul>
-      <li>[Sep 2025] I have started my research internship at Taipei Medical University</li>
-      <li>[Jun 2025] I have started my research internship at Shanghai Jiao Tong University</li>
-      <li>[Nov 2024] Our team got Gold Medal at ICPC Asia Taichung Regional</li>
+      <li><strong>[Sep 2025]</strong> <img src="img/icon/job.png" alt="job" class="icon">Started my research internship at Taipei Medical University.</li>
+      <li><strong>[Jun 2025]</strong> <img src="img/icon/job.png" alt="job" class="icon">Started my research internship at Shanghai Jiao Tong University.</li>
+      <li><strong>[Nov 2024]</strong> <img src="img/icon/trophy.png" alt="trophy" class="icon">Our team won Gold Medal at ICPC Asia Taichung Regional and qualified for ICPC Asia Pacific Championship held at NUS, Singapore.</li>
     </ul>
   </div>
 
@@ -109,6 +110,9 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <span class="spacer"></span>
   <strong>Hanoi University of Science and Technology (HUST)</strong> | Hanoi, Vietnam, 2021.08 - 2023.02
   <br><i>B.S. in Electrical Engineering, Talented Engineer's Program (Dropped out)</i>
+  <span class="spacer"></span>
+  <strong>Quoc Hoc Hue High School for the Gifted</strong> | Hue, Vietnam, 2018.08 - 2021.07
+  <br><i>High School Diploma, Specialized in Mathematics</i>
 
   <br><br>
   <h3><a name="experience"></a>Research Experience</h3>
@@ -117,30 +121,38 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <span class="spacer"></span>
   <strong>AI Security Lab, Shanghai Jiao Tong University</strong> | Shanghai, China, 2025.06 - 2025.08
   <br><i>Research Intern, Advisors: <a href="https://scholar.google.com/citations?user=8tg3mv0AAAAJ" target="_blank">Shilin Wang</a> and <a href="https://yangleisx.github.io/" target="_blank">Yang Lei</a></i>
-  <span class="spacer"></span>
+  <!-- <span class="spacer"></span>
   <strong>Data Intelligence Lab, KAIST</strong> | Daejeon, South Korea, 2024.12 - 2025.02
-  <br><i>Individual Study, Advisor: <a href="https://sites.google.com/view/whanglab/professor" target="_blank">Steven Euijong Whang</a></i>
+  <br><i>Individual Study, Advisor: <a href="https://sites.google.com/view/whanglab/professor" target="_blank">Steven Euijong Whang</a></i> -->
 
   <br><br>
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
+    <!-- <li>
+      <strong>Ranked 7th/230, Global AI Defense Challenge 2025</strong>
+      <br>Teammates: Wu Fei, Wang Zhenrui and Niu Zijian
+    </li>
+    <span class="spacer"></span> -->
     <li>
       <strong>31st Place, ICPC Asia Pacific Championship 2025</strong>
-      <br>Teammmate: Aidar Munduzbaev (<a href="https://codeforces.com/profile/aimoon" target="_blank" style="color: red">aimoon</a>)
+      <br>Teammmate: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a>
     </li>
+    <span class="spacer"></span>
     <li>
       <strong>Gold Medal, ICPC Asia Taichung Regional Contest 2024</strong>
-      <br>Teammmates: Aidar Munduzbaev (<a href="https://codeforces.com/profile/aimoon" target="_blank" style="color: red">aimoon</a>) and Hoang Ngoc Bao Khue (<a href="https://codeforces.com/profile/khuepr123" target="_blank" style="color: red">khuepr123</a>)
+      <br>Teammmates: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a> and <a href="https://codeforces.com/profile/khuepr123" target="_blank">Hoang Ngoc Bao Khue</a>
     </li>
+    <span class="spacer"></span>
     <li><strong>Third Prize, Vietnam National Math Olympiad (VMO) 2020</strong></li>
+    <span class="spacer"></span>
     <li><strong>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam 2018</strong></li>
   </ul>
 
 
   <br>
-  <h3><a name="professional"></a>Professional Service</h3>
+  <h3><a name="professional"></a>Services</h3>
   <ul>
-    <li>Volunteer: ABU Robocon 2024</li>
+    <li><strong>Voluntary and Leadership</strong>: ABU Robocon (2023 - 2024), Vice President at VN.KAIST (2023 - 2024)</li>
   </ul>
 </div>
 
