--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
     <div class="container">
       <div><a href="index.html">About</a></div>
       <div><a href="research.html" class="current">Publications</a></div>
-      <div><a href="fun.html">Fun</a></div>
+      <div><a href="blog.html">Blog</a></div>
     </div>
     <script>
       $(function () {
