--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <div class="container">
     <div><a href="index.html" class="current">About</a></div>
     <div><a href="research.html">Publications</a></div>
-    <div><a href="Blog.html">Blog</a></div>
+    <div><a href="blog.html">Blog</a></div>
   </div>
   <script>
     $(function () {
