--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
     <span class="spacer"></span> -->
     <li>
       <strong>31st Place, ICPC Asia Pacific Championship 2025</strong>
-      <br>Teammmate: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a>
+      <br>Teammate: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a>
     </li>
     <span class="spacer"></span>
     <li>
       <strong>Gold Medal, ICPC Asia Taichung Regional Contest 2024</strong>
-      <br>Teammmates: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a> and <a href="https://codeforces.com/profile/khuepr123" target="_blank">Hoang Ngoc Bao Khue</a>
+      <br>Teammates: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a> and <a href="https://codeforces.com/profile/khuepr123" target="_blank">Hoang Ngoc Bao Khue</a>
     </li>
     <span class="spacer"></span>
     <li><strong>Third Prize, Vietnam National Math Olympiad (VMO) 2020</strong></li>
