--- a/research.html
+++ b/research.html
@@ -53,8 +53,8 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br>Department of Industrial & Systems Engineering
   <br>Korea Advanced Institute of Science and Technology (KAIST)
   
-  
-  <br><br><a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a>
+  <span class="spacer"></span>
+  <a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a>
 
   <br><br>
   <!-- 
@@ -83,18 +83,18 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   </nav>
   <!--end of Navigation bar-->
 
-  See full list of my publications at <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Google Scholar</a>
+  <!-- See full list of my publications at <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Google Scholar</a>
   <br>
-  (*: equal contribution, ☨: corresponding author / major supervision)
+  (*: equal contribution, ☨: corresponding author / major supervision) -->
   <!-- <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> -->
   
   <h3><a name="pub"></a></h3>
   To be updated. Nothing to show now.
-  
-  <!-- <h3><a name="pub"></a>2025</h3> 
+  <!-- <span class="spacer"></span>
+  <h3><a name="pub"></a>Published in 2025</h3>
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8">[C1] How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
+        <div id="text" style = "color:#1f57b8"><strong style="color:purple">[C2]</strong> How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
         <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
         <br>International Conference about Batman and Boboiboy (ICBB) 2025
         [<a href="https://www.youtube.com/watch?v=zJCfJVVkjek" target="_blank">code</a>]
@@ -105,7 +105,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
 
       <li>
-        <div id="text" style = "color:#1f57b8">Aspect Sentiment Quad Prediction as Paraphrase Generation</div>
+        <div id="text" style = "color:#1f57b8"><strong style="color:purple">[C1]</strong> Aspect Sentiment Quad Prediction as Paraphrase Generation</div>
         <strong>Wenxuan Zhang</strong>, Yang Deng, Xin Li, Yifei Yuan, Lidong Bing, Wai Lam
         <br>Empirical Methods in Natural Language Processing (EMNLP) 2021 [<a href="https://aclanthology.org/2021.emnlp-main.726/">paper</a>] [<a href="https://github.com/isakzhang/absa-quad">data&code</a>]
         <br><span style="color:orangered;">Top 1% pro papers with spotlight</span>
