--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br><i>Research Intern, Advisor: <a href="https://scholar.google.com/citations?user=4c7lOjIAAAAJ&hl=en" target="_blank">Le Nguyen Quoc Khanh</a></i>
   <span class="spacer"></span>
   <strong>AI Security Lab, Shanghai Jiao Tong University</strong> | Shanghai, China, 2025.06 - 2025.08
-  <br><i>Research Intern, Advisors: <a href="https://scholar.google.com/citations?user=8tg3mv0AAAAJ" target="_blank">Shilin Wang</a> and <a href="https://yangleisx.github.io/" target="_blank">Yang Lei</a></i>
+  <br><i>Research Intern, Advisor: <a href="https://scholar.google.com/citations?user=8tg3mv0AAAAJ" target="_blank">Shilin Wang</a></i>
   <!-- <span class="spacer"></span>
   <strong>Data Intelligence Lab, KAIST</strong> | Daejeon, South Korea, 2024.12 - 2025.02
   <br><i>Individual Study, Advisor: <a href="https://sites.google.com/view/whanglab/professor" target="_blank">Steven Euijong Whang</a></i> -->
@@ -128,28 +128,23 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br><br>
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
-    <!-- <li>
-      <strong>Ranked 7th/230, Global AI Defense Challenge 2025</strong>
-      <br>Teammates: Wu Fei, Wang Zhenrui and Niu Zijian
-    </li>
-    <span class="spacer"></span> -->
     <li>
-      <strong>31st Place, ICPC Asia Pacific Championship 2025</strong>
-      <br>Teammate: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a>
+      <strong>Champion x 2</strong>, Global AI Defense Challenge 2025. <br>Cash Prize: ¥200,000 CNY (US$28,000).
     </li>
-    <span class="spacer"></span>
+    <!-- <span class="spacer"></span> -->
     <li>
-      <strong>Gold Medal, ICPC Asia Taichung Regional Contest 2024</strong>
-      <br>Teammates: <a href="https://stats.ioinformatics.org/people/7811" target="_blank">Aidar Munduzbaev</a> and <a href="https://codeforces.com/profile/khuepr123" target="_blank">Hoang Ngoc Bao Khue</a>
+      <strong>31st Place</strong>, ICPC Asia Pacific Championship 2025.
     </li>
-    <span class="spacer"></span>
-    <li><strong>Third Prize, Vietnam National Math Olympiad (VMO) 2020</strong></li>
-    <span class="spacer"></span>
-    <li><strong>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam 2018</strong></li>
+    <li>
+      <strong>Gold Medal</strong>, ICPC Asia Taichung Regional Contest 2024.
+    </li>
+    <li><strong>Third Prize</strong>, Vietnam National Math Olympiad (VMO) 2020.</li>
+    <li><strong>Valedictorian</strong>, Quoc Hoc Hue HSGS Entrance Exam 2018.</li>
   </ul>
 
 
-  <br>
+  <!-- <br> -->
+  <span class="spacer"></span>
   <h3><a name="professional"></a>Services</h3>
   <ul>
     <li><strong>Voluntary and Leadership</strong>: ABU Robocon (2023 - 2024), Vice President at VN.KAIST (2023 - 2024)</li>
@@ -157,7 +152,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 </div>
 
   <div id='footer'>
-    <p style="text-align:center;">Last updated: July 2025</p>
+    <p style="text-align:center;">Last updated: September 2025</p>
   </div>
 
 </body>
