--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title> Phan's Homepage </title>
+  <title> Phan | Research </title>
   <!-- link rel="icon" href="images/nlp_logo.jpg" / -->
   <meta name="author" content="Phan Nguyen">
   <meta name="keywords" content="Phan Nguyen, Nguyễn Hòa Phan, Phan Nguyen KAIST, Nguyen Hoa Phan">
