--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
     <ul>
       <li><strong>[Sep 2025]</strong> <img src="img/icon/job.png" alt="job" class="icon">Started my research internship at Taipei Medical University.</li>
       <li><strong>[Jun 2025]</strong> <img src="img/icon/job.png" alt="job" class="icon">Started my research internship at Shanghai Jiao Tong University.</li>
-      <li><strong>[Nov 2024]</strong> <img src="img/icon/trophy.png" alt="trophy" class="icon">Our team won Gold Medal at ICPC Asia Taichung Regional and qualified for ICPC Asia Pacific Championship held at NUS, Singapore.</li>
+      <li><strong>[Nov 2024]</strong> <img src="img/icon/trophy.png" alt="trophy" class="icon"><a href="./posts/icpc.html" target="_blank">Our team won Gold Medal at ICPC Asia Taichung Regional and qualified for ICPC Asia Pacific Championship held at NUS, Singapore.</a></li>
     </ul>
   </div>
 
