--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <div style="max-height: 300px; overflow-y: auto;">
     <ul>
       <li><strong>[Sep 2025]</strong> <img src="img/icon/job.png" alt="job" class="icon">Started my research internship at Taipei Medical University.</li>
+      <li><strong>[Sep 2025]</strong> <img src="img/icon/trophy.png" alt="trophy" class="icon">Our team won <span style="color: red;">First Place</span> in 2 tracks at Global AI Defense Challenge 2025. </li>
       <li><strong>[Jun 2025]</strong> <img src="img/icon/job.png" alt="job" class="icon">Started my research internship at Shanghai Jiao Tong University.</li>
       <li><strong>[Nov 2024]</strong> <img src="img/icon/trophy.png" alt="trophy" class="icon"><a href="./posts/icpc.html" target="_blank">Our team won Gold Medal at ICPC Asia Taichung Regional and qualified for ICPC Asia Pacific Championship held at NUS, Singapore.</a></li>
     </ul>
@@ -107,9 +108,9 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <h3><a name ="education"></a>Education</h3>
   <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong> | Daejeon, South Korea, 2023.08 - Present
   <br><i>B.S. in Computer Science and Industrial Systems Engineering</i>
-  <span class="spacer"></span>
+  <!-- <span class="spacer"></span>
   <strong>Hanoi University of Science and Technology (HUST)</strong> | Hanoi, Vietnam, 2021.08 - 2023.02
-  <br><i>B.S. in Electrical Engineering, Talented Engineer's Program (Dropped out)</i>
+  <br><i>B.S. in Electrical Engineering, Talented Engineer's Program (Dropped out)</i> -->
   <span class="spacer"></span>
   <strong>Quoc Hoc Hue High School for the Gifted</strong> | Hue, Vietnam, 2018.08 - 2021.07
   <br><i>High School Diploma, Specialized in Mathematics</i>
