--- a/research.html
+++ b/research.html
@@ -90,11 +90,11 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   
   <h3><a name="pub"></a></h3>
   To be updated. Nothing to show now.
-  <!-- <span class="spacer"></span>
-  <h3><a name="pub"></a>Published in 2025</h3>
+  <!-- <span class="spacer"></span> -->
+  <!-- <h3 style="border-bottom: none; padding-bottom: 0;"><a name="pub"></a>Published in 2025</h3>
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8"><strong style="color:purple">[C2]</strong> How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
+        <div id="text" style = "color:#1f57b8"><strong style="color:#6c5ce7">[C2]</strong> How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
         <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
         <br>International Conference about Batman and Boboiboy (ICBB) 2025
         [<a href="https://www.youtube.com/watch?v=zJCfJVVkjek" target="_blank">code</a>]
@@ -105,7 +105,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
 
       <li>
-        <div id="text" style = "color:#1f57b8"><strong style="color:purple">[C1]</strong> Aspect Sentiment Quad Prediction as Paraphrase Generation</div>
+        <div id="text" style = "color:#1f57b8"><strong style="color:#6c5ce7">[C1]</strong> Aspect Sentiment Quad Prediction as Paraphrase Generation</div>
         <strong>Wenxuan Zhang</strong>, Yang Deng, Xin Li, Yifei Yuan, Lidong Bing, Wai Lam
         <br>Empirical Methods in Natural Language Processing (EMNLP) 2021 [<a href="https://aclanthology.org/2021.emnlp-main.726/">paper</a>] [<a href="https://github.com/isakzhang/absa-quad">data&code</a>]
         <br><span style="color:orangered;">Top 1% pro papers with spotlight</span>
