--- a/index.html
+++ b/index.html
@@ -83,16 +83,18 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   </script>
 </nav>
   <!--end of Navigation bar-->
-  <br>
+  <!-- <br> -->
 
-  <h3>About me</h3>
+  <h3>Bio</h3>
   <!-- <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3> -->
   I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
   My research interests lie broadly in natural language processing, computer vision, and optimization.
   I am in the process of exploring my research direction.
   <!-- <span class="spacer"></span> -->
 
-  <br><br>
+  <br>
+  <span class="spacer"></span>
+  <!-- <br> -->
   <h3 id="news">News</h3>
   <!-- (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>) -->
   <div style="max-height: 300px; overflow-y: auto;">
@@ -104,7 +106,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
     </ul>
   </div>
 
-  <br>
+  <!-- <br> -->
   <h3><a name ="education"></a>Education</h3>
   <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong> | Daejeon, South Korea, 2023.08 - Present
   <br><i>B.S. in Computer Science and Industrial Systems Engineering</i>
@@ -115,7 +117,9 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <strong>Quoc Hoc Hue High School for the Gifted</strong> | Hue, Vietnam, 2018.08 - 2021.07
   <br><i>High School Diploma, Specialized in Mathematics</i>
 
-  <br><br>
+  <br>
+  <span class="spacer"></span>
+  <!-- <br> -->
   <h3><a name="experience"></a>Research Experience</h3>
   <strong>AIBioMed Research Group, Taipei Medical University</strong> | Taipei, Taiwan, 2025.09 - 2026.01
   <br><i>Research Intern, Advisor: <a href="https://scholar.google.com/citations?user=4c7lOjIAAAAJ&hl=en" target="_blank">Le Nguyen Quoc Khanh</a></i>
@@ -126,7 +130,9 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <strong>Data Intelligence Lab, KAIST</strong> | Daejeon, South Korea, 2024.12 - 2025.02
   <br><i>Individual Study, Advisor: <a href="https://sites.google.com/view/whanglab/professor" target="_blank">Steven Euijong Whang</a></i> -->
 
-  <br><br>
+  <br>
+  <span class="spacer"></span>
+  <!-- <br> -->
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
     <li>
