--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
   <h3>Bio</h3>
   <!-- <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3> -->
-  I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
-  My research interests lie broadly in natural language processing, computer vision, and optimization.
-  I am in the process of exploring my research direction.
+  I'm Phan, a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
+  I'm working with <a href="https://scholar.google.com/citations?user=4c7lOjIAAAAJ&hl=en" target="_blank">Prof. Le Nguyen Quoc Khanh</a> on research in AI for medical and healthcare applications, with a particular focus on computer vision for medical imaging and the analysis of diverse types of medical data.
   <!-- <span class="spacer"></span> -->
 
   <br>
@@ -133,10 +132,12 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br>
   <span class="spacer"></span>
   <!-- <br> -->
-  <h3><a name="awards"></a>Selected Honors & Awards</h3>
+  <h3><a name="awards"></a>Competition Awards</h3>
   <ul>
     <li>
-      <strong>Champion x 2</strong>, Global AI Defense Challenge 2025. <br>Cash Prize: ¥200,000 CNY (US$28,000).
+      <strong>First Place Winner</strong>, Global AI Defense Challenge 2025. 
+      <br>Ranked 1/891 (Image Generation Track) and 1/364 (Video Generation Track). 
+      <br>Cash Prize: ¥200,000 CNY (US$28,000).
     </li>
     <!-- <span class="spacer"></span> -->
     <li>
@@ -151,11 +152,11 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
 
   <!-- <br> -->
-  <span class="spacer"></span>
+  <!-- <span class="spacer"></span>
   <h3><a name="professional"></a>Services</h3>
   <ul>
     <li><strong>Voluntary and Leadership</strong>: ABU Robocon (2023 - 2024), Vice President at VN.KAIST (2023 - 2024)</li>
-  </ul>
+  </ul> -->
 </div>
 
   <div id='footer'>
