--- a/research.html
+++ b/research.html
@@ -89,37 +89,40 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <!-- <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> -->
   
   <h3><a name="pub"></a></h3>
-  To be updated. Nothing to show now.
   <!-- <span class="spacer"></span> -->
-  <!-- <h3 style="border-bottom: none; padding-bottom: 0;"><a name="pub"></a>Published in 2025</h3>
+  <h3 style="border-bottom: none; padding-bottom: 0;"><a name="pub"></a>Under Review</h3>
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8"><strong style="color:#6c5ce7">[C2]</strong> How to save the world from World War III? A deep understanding about Pigeonhole Theorem</div>
-        <strong>Phan Nguyen*</strong>, Minh Nguyen, Khang Tran
-        <br>International Conference about Batman and Boboiboy (ICBB) 2025
+        <div id="text" style = "color:#1f57b8">JI-ADF: Joint–Individual with Adaptive Decision Fusion Structure for Multimodal Skin Lesion Classification</div>
+        <strong>Phan Nguyen*</strong>, Dat Cao*, Quang Hien Kha, Trang Q.T. Pham, Nguyen Quoc Khanh Le
+        <br><i>Under review at MIDL 2026.</i>
+      </li>
+      <span class="spacer"></span>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">TwinRefNet: A Refinement-Based Architecture for Multimodal Skin Lesion Diagnosis</div>
+        <strong>Phan Nguyen</strong>
+        <br><i>Under review at IMIP 2026.</i>
+      </li>
+      <!-- <span class="spacer"></span> -->
+      <!-- <li>
+        <div id="text" style = "color:#1f57b8">[J1] tDDI: Towards Robust Drug–Drug Interaction Prediction with TabTransformer and Uncertainty Estimation</div>
+        Hien Kha, Anh Nguyen, Uyen Huynh, Khoa Pham, Phi Pham, Phat Huynh, Dat Le, Phat Vo, Thac Pham, Hieu Do, Thu Phung, Khanh Le, Minh Le, Phat Nguyen, <strong>Phan Nguyen</strong>, Toan Nguyen, Thanh-Huy Nguyen, Phat Huynh, Nguyen Quoc Khanh Le
+        <br><i>International Conference about Batman and Boboiboy (ICBB) 2025</i>
         [<a href="https://www.youtube.com/watch?v=zJCfJVVkjek" target="_blank">code</a>]
         [<a href="https://www.youtube.com/watch?v=lj8TV9q59P4" target="_blank">paper</a>]
         <br><span style="color:orangered;">Top 1% pro papers with spotlight</span>
       </li>
-      <p> </p>
+      <span class="spacer"></span> -->
 
-
-      <li>
-        <div id="text" style = "color:#1f57b8"><strong style="color:#6c5ce7">[C1]</strong> Aspect Sentiment Quad Prediction as Paraphrase Generation</div>
-        <strong>Wenxuan Zhang</strong>, Yang Deng, Xin Li, Yifei Yuan, Lidong Bing, Wai Lam
-        <br>Empirical Methods in Natural Language Processing (EMNLP) 2021 [<a href="https://aclanthology.org/2021.emnlp-main.726/">paper</a>] [<a href="https://github.com/isakzhang/absa-quad">data&code</a>]
-        <br><span style="color:orangered;">Top 1% pro papers with spotlight</span>
-      </li>
-      <p> </p>
-
-    </ul> -->
+    </ul>
 
 
   <!-- <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> -->
 </div>
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: July 2025</p>
+  <p style="text-align:center;">Last updated: December 2025</p>
 </div>
 
 </body>
